[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visualisecosts"
version = "0.1.0"
description = "Visualize and project cost data from Excel spreadsheets with cumulative graphs and financial year tables"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Phil Quinlan", email = "philip.quinlan@nottingham.ac.uk"},
]
keywords = ["costs", "visualization", "excel", "financial", "projections"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas",
    "pandas-stubs>=2.3.3.251201",
    "matplotlib",
    "openpyxl",
]

[project.scripts]
plot-costs = "plot_costs:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
